# overlay_arrows_and_more

./: .gitignore  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
overlay_arrows_and_more/: __init__.py  example.py  overlay.py
samples/: example_animated_elements.py  example_highlighted_area.py  example_original.py  example_quick_start.py  example_rec_indicator.py  example_rec_square_arrow_text.py
